--- a/Views/Anime/Edit.cshtml
+++ b/Views/Anime/Edit.cshtml
@@ -1,32 +1,33 @@
 ﻿@model AnimeStreamerV2.Models.AnimeModel
-
+@using AnimeStreamerV2.Models
 @{
     ViewData["Title"] = "Edit Anime";
 }
-
 <h1>Edit Anime</h1>
-
-
 <form asp-action="Edit" method="post" enctype="multipart/form-data">
-
-    <input type="hidden" value="@Model.Id" asp-for="Id" />
+    <input type="hidden" asp-for="Id" />
     @Html.AntiForgeryToken()
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group mb-3">
         <label asp-for="Name" class="control-label">Name</label>
-        <input asp-for="Name" name="Name" class="form-control" value="@Model.Name" />
+        <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group mb-3">
         <label asp-for="Description" class="control-label">Description</label>
-        <textarea asp-for="Description" name="Description" class="form-control" rows="3">@Model.Description</textarea>
+        <textarea asp-for="Description" class="form-control" rows="3"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Rating" class="control-label"></label>
+        <select asp-for="Rating" asp-items="EnumHelpers.GetEnumSelectList<AgeRating>()" class="form-control"></select>
+        <span asp-validation-for="Rating" class="text-danger"></span>
     </div>
     <div class="form-group mb-3">
         <input type="file" name="AnimeIcon" />
     </div>
     <div class="form-group">
         <input type="submit" value="Save" class="btn btn-anime" />
-        <a  href="@Url.Action("Index", "Anime")" class="btn btn-secondary">Back to List</a>
+        <a href="@Url.Action("Index", "Anime")" class="btn btn-secondary">Back to List</a>
     </div>
 </form>
