add traylers  icon for epizode

--- a/Views/Anime/Create.cshtml
+++ b/Views/Anime/Create.cshtml
@@ -25,7 +25,7 @@
                     <span asp-validation-for="@Model.Description" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <input  type="file" name="AnimeIcon" />
+                    <input type="file" name="AnimeIcon" accept="image/*" />
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-anime" />
