--- a/Views/Shared/Components/AnimeRow/Default.cshtml
+++ b/Views/Shared/Components/AnimeRow/Default.cshtml
@@ -4,11 +4,14 @@
     <div class="anime-scroll-container">
         @foreach (var item in Model)
         {
-            <div class="anime-item">
-                <a href="@Url.Action("Details", "Anime", new { id = item.Id })">
-                    <img src="@item.IconPath" alt="Anime Icon" class="rounded-image" />
-                </a>
-            </div>
+            if (item.IconPath!=null)
+            {
+                <div class="anime-item">
+                    <a href="@Url.Action("Details", "Anime", new { id = item.Id })">
+                        <img src="@item.IconPath" alt="Anime Icon" class="rounded-image" />
+                    </a>
+                </div>
+            }
         }
     </div>
 </div>
