--- a/Views/Anime/Index.cshtml
+++ b/Views/Anime/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Anime List";
     var allContris =@Model.Select(anime=>anime.CountryOfOrigin).Distinct();
+
 }
 @section LinkCss {
     @await Html.PartialAsync("Components/AnimeRow/LinkCss")
@@ -12,11 +13,22 @@
 <p>
     <a href="@Url.Action("Create", "Anime")" class="btn btn-anime mb-3">Add New Anime</a>
 </p>-->
-@foreach (var item in allContris)
+@switch (ViewData["fun"])
 {
-    @await Component.InvokeAsync("AnimeRow",new{
-        AnimeList =  Model.Where(anime=>anime.CountryOfOrigin== item.ToString()).ToList(),
-        RowName=item.ToString()
-})
+    case "BySometing":
+
+        break;
+    default:
+        @foreach (var item in allContris)
+        {
+            @await Component.InvokeAsync("AnimeRow", new
+                {
+                    AnimeList = Model.Where(anime => anime.CountryOfOrigin== item.ToString()).ToList(),
+                    RowName = item.ToString(),
+                    BaseUrl = ViewData["baseUrl"]
+                })
+        }
+
+        break;
 }
 
