full work categories woek

--- a/Views/Anime/Details.cshtml
+++ b/Views/Anime/Details.cshtml
@@ -68,14 +68,15 @@
                     {
                         if (user!=null)
                         {
-                            <div class="episode-item" onclick="loadVideo(@episode.Id)">
+                            <div id="@(episode.Id)" class="episode-item" onclick="loadVideo(@episode.Id)">
                                 <img src="@(ViewData["baseUrl"])@episode.EpisodaIcon" style="height:30vh;display: block; margin-left: auto; margin-right: auto;" alt="Anime Icon" /><br />
                                 <p class="episode-name">@episode.Name  (@episode.Season : @episode.EpisodeNumber)</p>
                             </div>
+                            <a href="@(ViewData["baseUrl"])Episode/Edit/@(episode.Id)">Edit  (@episode.Season : @episode.EpisodeNumber)</a>
                         }
                         else
                         {
-                            <div class="episode-item" onclick="window.location.href = `@(ViewData["baseUrl"])Identity/Account/Login?ReturnUrl=%2FAnime%2FDetails%2F@(Model.Id)`">
+                            <div id="@(episode.Id)" class="episode-item" onclick="window.location.href = `@(ViewData["baseUrl"])Identity/Account/Login?ReturnUrl=%2FAnime%2FDetails%2F@(Model.Id)#@(episode.Id)`">
                                 <img src="@(ViewData["baseUrl"])@episode.EpisodaIcon" style="height:30vh;display: block; margin-left: auto; margin-right: auto;" alt="Anime Icon" /><br />
                                 <p class="episode-name">@episode.Name  (@episode.Season : @episode.EpisodeNumber)</p>
                             </div>
@@ -123,5 +124,6 @@
             // Iniciální kontrola při načtení stránky
             handleVideoVisibility();
         });
+
     </script>
 }
