--- a/Views/Anime/Details.cshtml
+++ b/Views/Anime/Details.cshtml
@@ -68,7 +68,7 @@
                     {
                         if (user!=null)
                         {
-                            <div id="@(episode.Id)" class="episode-item" onclick="loadVideo(@episode.Id)">
+                            <div id="@(episode.Id)" class="episode-item" onclick="loadVideo(@(episode.Id),@(episode.WatchProgres))">
                                 <img src="@(ViewData["baseUrl"])@episode.EpisodaIcon" style="height:30vh;display: block; margin-left: auto; margin-right: auto;" alt="Anime Icon" /><br />
                                 <p class="episode-name">@episode.Name  (@episode.Season : @episode.EpisodeNumber)</p>
                             </div>
@@ -90,7 +90,10 @@
 </div>
 
 <div>
-    <a href="@Url.Action("Edit", "Anime", new { id = Model.Id })" class="btn btn-warning">Edit</a>
+    @if (User.IsInRole("Admin")||User.IsInRole("ContentCreator"))
+    {
+        <a href="@Url.Action("Edit", "Anime", new { id = Model.Id })" class="btn btn-warning">Edit</a>
+    }
     <a href="@Url.Action("Index", "Anime")" class="btn btn-secondary">Back to List</a>
 </div>
 
